--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -219,7 +219,7 @@ __Constraints__
 * The index *must be a positive integer* 1, 2, 3, ...
 ****
 
-[coming in v2.0]
+tag::tag[]
 ==== Tagging multiple contacts : `tag` +
 
 Tags are a useful way of grouping and labeling contacts. But editing them manually, one by one, can be a tedious process.
@@ -247,6 +247,8 @@ __Constraints__
 * Every INDEX must be separated by a comma.
 * Every TAG must have a prefix.
 ****
+
+end::tag[]
 
 ==== Removing tags from multiple contacts : `detag`
 
@@ -354,6 +356,7 @@ __Constraints__
 
 === Managing Tasks
 
+tag::addtask[]
 ==== Adding tasks: `add`
 
 Whether it is a host of pending submissions, a get-together or a multiday program, adding it to Mobilize can easily help you keep track of it all. +
@@ -394,6 +397,8 @@ _Constraints_ +
 ****
 * Dates MUST be preceded by one of the prefixes.
 ****
+
+end::addtask[]
 
 ==== Finding tasks by description or deadline: `find`
 
@@ -439,6 +444,7 @@ __Constraints__
 * The index *must be a positive integer* `1, 2, 3, ...`
 ****
 
+tag::edittask[]
 ==== Editing tasks: `edit`
 
 Change of plans? The edit feature offers a hassle-free solution to change any parameter of an existing task.
@@ -468,7 +474,8 @@ __Constraints__
 * If a prefix is used with a blank parameter, the respective date associated with that prefix will be deleted.
 ****
 
-==== Archiving completed tasks: `archive`
+end::edittask[]
+==== Archiving completed tasks: `archive` [Coming in V2.0]
 
 Done with your task? Congratulations! To mark it as done, just key in:
 
