--- a/docs/team/raisakabir.adoc
+++ b/docs/team/raisakabir.adoc
@@ -4,7 +4,8 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :stylesDir: ../stylesheets
 
 == Project: AddressBook - Level 4
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+Mobilize is a desktop application built to help people organize their contacts and tasks. It is primarily written
+in Java and uses the Object Oriented Paradigm. The user interacts with it using a CLI, and it has a GUI created with JavaFX.
 
 *Code contributed*: [https://github.com/CS2103AUG2017-T11-B3/main/blob/master/collated/main/raisa2010.md[Functional code]] [https://github.com/CS2103AUG2017-T11-B3/main/blob/master/collated/test/raisa2010.md[Test code]]
 
