--- a/docs/team/yapzuoxuan.adoc
+++ b/docs/team/yapzuoxuan.adoc
@@ -3,12 +3,12 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Project: AddressBook - Level 4
+== Project: PEERSONAL
 PEERSONAL is a desktop address book application. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
 *Code contributed*: [https://github.com/CS2103AUG2017-T10-B2/main/blob/master/collated/main/wishingmaid.md[Functional code]] [https://github.com/CS2103AUG2017-T10-B2/main/blob/master/collated/test/wishingmaid.md[Test code]]
 
-=== Enhancement Added: Undo/Redo
+=== Enhancement Added: AddPhotoCommand
 
 ==== External behavior
 
