--- a/collated/main/CT15.md
+++ b/collated/main/CT15.md
@@ -1,4 +1,141 @@
 # CT15
+###### \java\seedu\address\commons\core\commandidentifier\CommandIdentifier.java
+``` java
+
+/**
+ * Represents the argument that help command takes in.
+ * Guarantees: parameter is present and not null, parameter is validated.
+ */
+public class CommandIdentifier {
+    public static final String MESSAGE_COMMAND_WORD_CONSTRAINTS = "The command argument should be one of the "
+            + "following (or their aliases):\n"
+            + HelpCommand.COMMAND_QUICK_HELP_WORD + ", "
+            + AddCommand.COMMAND_WORD + ", "
+            + CalendarCommand.COMMAND_WORD + ", "
+            + ClearCommand.COMMAND_WORD + ", "
+            + Country.COMMAND_WORD + ", "
+            + CopyCommand.COMMAND_WORD + ", "
+            + DeleteCommand.COMMAND_WORD + ", "
+            + EditCommand.COMMAND_WORD + ", "
+            + EmailCommand.COMMAND_WORD + ", "
+            + ExitCommand.COMMAND_WORD + ", "
+            + FindCommand.COMMAND_WORD + ", "
+            + HelpCommand.COMMAND_WORD + ", "
+            + HistoryCommand.COMMAND_WORD + ", "
+            + ListCommand.COMMAND_WORD + ", "
+            + RedoCommand.COMMAND_WORD + ", "
+            + ScheduleCommand.COMMAND_WORD + ", "
+            + LocateCommand.COMMAND_WORD + ", "
+            + UndoCommand.COMMAND_WORD + ", "
+            + WelcomeCommand.COMMAND_WORD + ", "
+            + Country.COMMAND_WORD;
+
+    public static final List<String> COMMAND_VALIDATION_LIST = ImmutableList.of(
+            HelpCommand.COMMAND_QUICK_HELP_WORD,
+            AddCommand.COMMAND_WORD, AddCommand.COMMAND_ALIAS,
+            CalendarCommand.COMMAND_WORD, CalendarCommand.COMMAND_ALIAS,
+            ClearCommand.COMMAND_WORD, ClearCommand.COMMAND_ALIAS, Country.COMMAND_WORD,
+            CopyCommand.COMMAND_WORD, CopyCommand.COMMAND_ALIAS,
+            DeleteCommand.COMMAND_WORD, DeleteCommand.COMMAND_ALIAS,
+            EditCommand.COMMAND_WORD, EditCommand.COMMAND_ALIAS,
+            EmailCommand.COMMAND_WORD, EmailCommand.COMMAND_ALIAS,
+            ExitCommand.COMMAND_WORD, ExitCommand.COMMAND_ALIAS,
+            FindCommand.COMMAND_WORD, FindCommand.COMMAND_ALIAS,
+            HelpCommand.COMMAND_WORD, HelpCommand.COMMAND_ALIAS,
+            HistoryCommand.COMMAND_WORD, HistoryCommand.COMMAND_ALIAS,
+            ListCommand.COMMAND_WORD, ListCommand.COMMAND_ALIAS,
+            RedoCommand.COMMAND_WORD, RedoCommand.COMMAND_ALIAS,
+            ScheduleCommand.COMMAND_WORD, ScheduleCommand.COMMAND_ALIAS,
+            LocateCommand.COMMAND_WORD, LocateCommand.COMMAND_ALIAS,
+            UndoCommand.COMMAND_WORD, UndoCommand.COMMAND_ALIAS,
+            WelcomeCommand.COMMAND_WORD, WelcomeCommand.COMMAND_ALIAS,
+            Country.COMMAND_WORD); // no alias
+
+    public final String value;
+
+    /**
+     * Validates given command word.
+     *
+     * @throws IllegalValueException if the given commandIdentifier string is invalid.
+     */
+    public CommandIdentifier(String commandIdentifier) throws IllegalValueException {
+        requireNonNull(commandIdentifier);
+        if (!isValidCommandIdentifier(commandIdentifier) && !commandIdentifier.equals("")) {
+            throw new IllegalValueException(MESSAGE_COMMAND_WORD_CONSTRAINTS);
+        }
+        this.value = commandIdentifier;
+    }
+
+    /**
+     * Returns true if a given string is a valid existing command word.
+     */
+    public static boolean isValidCommandIdentifier(String test) {
+        return COMMAND_VALIDATION_LIST.contains(test);
+    }
+
+    @Override
+    public String toString() {
+        return value;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof CommandIdentifier // instanceof handles nulls
+                && this.value.equals(((CommandIdentifier) other).value)); // state check
+    }
+
+    @Override
+    public int hashCode() {
+        return value.hashCode();
+    }
+}
+```
+###### \java\seedu\address\commons\core\enablingkeyword\EnablingKeyword.java
+``` java
+/**
+ * Contains two possible keywords, either "enable" or "disable".
+ * Guarantees: parameter is present and not null, parameter is validated.
+ */
+public class EnablingKeyword {
+    public static final String MESSAGE_ENABLING_KEYWORD_CONSTRAINTS = "Enabling keyword should only be either"
+            + "enable or disable";
+
+    private String keyword;
+
+    /**
+     * Validates given enabling keyword.
+     *
+     * @throws IllegalValueException if the given keyword string is invalid.
+     */
+    public EnablingKeyword(String keyword) throws IllegalValueException {
+        requireNonNull(keyword);
+
+        if (!keyword.equals("enable") && !keyword.equals("disable")) {
+            throw new IllegalValueException(MESSAGE_ENABLING_KEYWORD_CONSTRAINTS);
+        }
+
+        this.keyword = keyword;
+    }
+
+    @Override
+    public String toString() {
+        return keyword;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof EnablingKeyword // instanceof handles nulls
+                && this.keyword.equals(((EnablingKeyword) other).keyword)); // state check
+    }
+
+    @Override
+    public int hashCode() {
+        return keyword.hashCode();
+    }
+}
+```
 ###### \java\seedu\address\commons\util\DateUtil.java
 ``` java
 /**
@@ -124,11 +261,18 @@ public class DateUtil {
         this.commandIdentifier = targetCommandIdentifier;
     }
 
+```
+###### \java\seedu\address\logic\commands\HelpCommand.java
+``` java
     @Override
     public CommandResult execute() {
         String commandResult;
 
         switch(commandIdentifier.value) {
+
+        case HelpCommand.COMMAND_QUICK_HELP_WORD:
+            commandResult = COMMAND_QUICK_HELP;
+            break;
 
         case AddCommand.COMMAND_ALIAS:
             //Fallthrough
@@ -235,6 +379,10 @@ public class DateUtil {
             commandResult = UndoCommand.MESSAGE_USAGE;
             break;
 
+        case Country.COMMAND_WORD:
+            commandResult = Country.getCodeList();
+            break;
+
         default:
             EventsCenter.getInstance().post(new ShowHelpRequestEvent());
             commandResult = SHOWING_HELP_MESSAGE;
@@ -244,13 +392,6 @@ public class DateUtil {
         return new CommandResult(commandResult);
     }
 
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof HelpCommand // instanceof handles nulls
-                && this.commandIdentifier.equals(((HelpCommand) other).commandIdentifier)); // state check
-    }
-}
 ```
 ###### \java\seedu\address\logic\commands\ScheduleCommand.java
 ``` java
@@ -291,48 +432,58 @@ public class ScheduleCommand extends UndoableCommand {
     @Override
     public CommandResult executeUndoableCommand() throws CommandException {
 
-        List<ReadOnlyPerson> lastShownList = model.getFilteredPersonList();
+        Set<Name> schedulePersonNames = fillSchedulePersonNamesSet(model, indices);
 
-        for (Index index: indices) {
-
-            if (index.getZeroBased() >= lastShownList.size()) {
-                throw new CommandException(Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX);
-            }
-
-            ReadOnlyPerson schedulePerson = lastShownList.get(index.getZeroBased());
-            Schedule schedule = new Schedule(date, activity, schedulePerson.getName());
-
-            Set<Schedule> schedules = new HashSet<>(schedulePerson.getSchedules());
-
-            if (!schedulePerson.getSchedules().contains(schedule)) {
-                schedules.add(schedule);
-            }
-
-            Person scheduleAddedPerson = new Person(schedulePerson.getName(), schedulePerson.getPhone(),
-                    schedulePerson.getCountry(), schedulePerson.getEmails(), schedulePerson.getAddress(), schedules,
-                    schedulePerson.getTags());
-            try {
-                model.updatePerson(schedulePerson, scheduleAddedPerson);
-            } catch (DuplicatePersonException dpe) {
-                throw new CommandException(MESSAGE_DUPLICATE_PERSON);
-            } catch (PersonNotFoundException pnfe) {
-                throw new AssertionError("The target person cannot be missing");
-            }
-        }
+        updateModelWithUpdatedSchedules(model, indices, schedulePersonNames, date, activity);
         model.updateFilteredPersonList(Model.PREDICATE_SHOW_ALL_PERSONS);
 
         return new CommandResult(String.format(MESSAGE_SCHEDULE_SUCCESS, indices.size()));
     }
 
+```
+###### \java\seedu\address\logic\commands\WelcomeCommand.java
+``` java
+/**
+ * Enables or disables the welcome screen.
+ */
+public class WelcomeCommand extends Command {
+
+    public static final String COMMAND_WORD = "welcome";
+
+    public static final String COMMAND_ALIAS = "w";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + "(alias: " + COMMAND_ALIAS + ")"
+            + ": Enables / disables the welcome screen upon running ConTag.\n"
+            + "Parameters: "
+            + "[ENABLING_KEYWORD] (enable / disable)";
+
+    public static final String WELCOME_SCREEN_MESSAGE = "Welcome window is now %1$s.";
+
+    private final EnablingKeyword enablingKeyword;
+
+    public WelcomeCommand(EnablingKeyword enablingKeyword) {
+        this.enablingKeyword = enablingKeyword;
+    }
+
+    @Override
+    public CommandResult execute() throws CommandException {
+        String keyword = enablingKeyword.toString();
+
+        if (keyword.equals("enable")) {
+            prefs.enableWelcomeScreen();
+        } else if (keyword.equals("disable")) {
+            prefs.disableWelcomeScreen();
+        }
+        return new CommandResult(String.format(WELCOME_SCREEN_MESSAGE, (keyword + "d")));
+    }
+
     @Override
     public boolean equals(Object other) {
         return other == this // short circuit if same object
-                || (other instanceof ScheduleCommand // instanceof handles nulls
-                && date.equals(((ScheduleCommand) other).date)
-                && activity.equals(((ScheduleCommand) other).activity));
+                || (other instanceof WelcomeCommand // instanceof handles nulls
+                && this.enablingKeyword.equals(((WelcomeCommand) other).enablingKeyword)); // state check
     }
 }
-
 ```
 ###### \java\seedu\address\logic\parser\ParserUtil.java
 ``` java
@@ -359,11 +510,22 @@ public class ScheduleCommand extends UndoableCommand {
      * Parses {@code commandWord} into an {@code CommandWord} and returns it.
      * Leading and trailing whitespaces will be trimmed.
      *
-     * @throws IllegalValueException if the specified index is invalid (not non-zero unsigned integer).
+     * @throws IllegalValueException if the specified commandWord is invalid.
      */
     public static CommandIdentifier parseCommandIdentifier(String commandWord) throws IllegalValueException {
         requireNonNull(commandWord);
         return new CommandIdentifier(commandWord.trim());
+    }
+
+    /**
+     * Parses {@code enablingKeyword} into an {@code EnablingKeyword} and returns it.
+     * Leading and trailing whitespaces will be trimmed.
+     *
+     * @throws IllegalValueException if the specified enablingKeyword is invalid (neither "enable" nor "disable").
+     */
+    public static EnablingKeyword parseEnablingKeyword(String enablingKeyword) throws IllegalValueException {
+        requireNonNull(enablingKeyword);
+        return new EnablingKeyword(enablingKeyword.trim());
     }
 
 ```
@@ -423,6 +585,33 @@ public class ScheduleCommandParser implements Parser<ScheduleCommand> {
     }
 }
 ```
+###### \java\seedu\address\logic\parser\WelcomeCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new WelcomeCommand object
+ */
+public class WelcomeCommandParser implements Parser<WelcomeCommand> {
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the WelcomeCommand
+     * and returns a HelpCommand object for execution.
+     * @throws ParseException if the user input does not conform the expected format
+     */
+    @Override
+    public WelcomeCommand parse(String args) throws ParseException {
+        if (args.trim().contains(" ")) {
+            throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, WelcomeCommand.MESSAGE_USAGE));
+        }
+
+        try {
+            EnablingKeyword enablingKeyword = ParserUtil.parseEnablingKeyword(args);
+            return new WelcomeCommand(enablingKeyword);
+        } catch (IllegalValueException ive) {
+            throw new ParseException(ive.getMessage(), ive);
+        }
+    }
+}
+```
 ###### \java\seedu\address\model\AddressBook.java
 ``` java
     public void setSchedules(Set<Schedule> schedules) {
@@ -443,11 +632,16 @@ public class ScheduleCommandParser implements Parser<ScheduleCommand> {
 
         schedules.mergeFrom(personSchedules);
         schedules.sort();
+        setSchedulesToRemind();
 
         //Testing
         Iterator<Schedule> iterator2 = schedules.iterator();
         while (iterator2.hasNext()) {
             logger.info("Schedules after: " + iterator2.next().toString() + "\n");
+        }
+        Iterator<Schedule> iterator3 = schedulesToRemind.iterator();
+        while (iterator3.hasNext()) {
+            logger.info("Schedules to Remind: " + iterator3.next().toString() + "\n");
         }
 
         // Create map with values = schedule object references in the master list
@@ -480,88 +674,6 @@ public class ScheduleCommandParser implements Parser<ScheduleCommand> {
         return schedules.asObservableList();
     }
 
-```
-###### \java\seedu\address\model\commandidentifier\CommandIdentifier.java
-``` java
-/**
- * Represents the argument that help command takes in.
- * Guarantees: parameter is present and not null, parameter is validated.
- */
-public class CommandIdentifier {
-    public static final String MESSAGE_COMMAND_WORD_CONSTRAINTS = "The command argument should be one of the "
-            + "following (or their aliases):\n"
-            + AddCommand.COMMAND_WORD + ", "
-            + CalendarCommand.COMMAND_WORD + ", "
-            + ClearCommand.COMMAND_WORD + ", "
-            + CopyCommand.COMMAND_WORD + ", "
-            + DeleteCommand.COMMAND_WORD + ", "
-            + EditCommand.COMMAND_WORD + ", "
-            + ExitCommand.COMMAND_WORD + ", "
-            + FindCommand.COMMAND_WORD + ", "
-            + HelpCommand.COMMAND_WORD + ", "
-            + HistoryCommand.COMMAND_WORD + ", "
-            + ListCommand.COMMAND_WORD + ", "
-            + RedoCommand.COMMAND_WORD + ", "
-            + ScheduleCommand.COMMAND_WORD + ", "
-            + LocateCommand.COMMAND_WORD + ", "
-            + UndoCommand.COMMAND_WORD;
-
-    public static final List<String> COMMAND_VALIDATION_LIST = ImmutableList.of(
-            AddCommand.COMMAND_WORD, AddCommand.COMMAND_ALIAS,
-            CalendarCommand.COMMAND_WORD, CalendarCommand.COMMAND_ALIAS,
-            ClearCommand.COMMAND_WORD, ClearCommand.COMMAND_ALIAS,
-            CopyCommand.COMMAND_WORD, CopyCommand.COMMAND_ALIAS,
-            DeleteCommand.COMMAND_WORD, DeleteCommand.COMMAND_ALIAS,
-            EditCommand.COMMAND_WORD, EditCommand.COMMAND_ALIAS,
-            ExitCommand.COMMAND_WORD, ExitCommand.COMMAND_ALIAS,
-            FindCommand.COMMAND_WORD, FindCommand.COMMAND_ALIAS,
-            HelpCommand.COMMAND_WORD, HelpCommand.COMMAND_ALIAS,
-            HistoryCommand.COMMAND_WORD, HistoryCommand.COMMAND_ALIAS,
-            ListCommand.COMMAND_WORD, ListCommand.COMMAND_ALIAS,
-            RedoCommand.COMMAND_WORD, RedoCommand.COMMAND_ALIAS,
-            ScheduleCommand.COMMAND_WORD, ScheduleCommand.COMMAND_ALIAS,
-            LocateCommand.COMMAND_WORD, LocateCommand.COMMAND_ALIAS,
-            UndoCommand.COMMAND_WORD, UndoCommand.COMMAND_ALIAS);
-
-    public final String value;
-
-    /**
-     * Validates given command word.
-     *
-     * @throws IllegalValueException if the given tag name string is invalid.
-     */
-    public CommandIdentifier(String commandIdentifier) throws IllegalValueException {
-        requireNonNull(commandIdentifier);
-        if (!isValidCommandIdentifier(commandIdentifier) && !commandIdentifier.equals("")) {
-            throw new IllegalValueException(MESSAGE_COMMAND_WORD_CONSTRAINTS);
-        }
-        this.value = commandIdentifier;
-    }
-
-    /**
-     * Returns true if a given string is a valid existing command word.
-     */
-    public static boolean isValidCommandIdentifier(String test) {
-        return COMMAND_VALIDATION_LIST.contains(test);
-    }
-
-    @Override
-    public String toString() {
-        return value;
-    }
-
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof CommandIdentifier // instanceof handles nulls
-                && this.value.equals(((CommandIdentifier) other).value)); // state check
-    }
-
-    @Override
-    public int hashCode() {
-        return value.hashCode();
-    }
-}
 ```
 ###### \java\seedu\address\model\person\Person.java
 ``` java
@@ -601,6 +713,12 @@ public class CommandIdentifier {
      */
     ObservableList<Tag> getTagList();
 
+    /**
+     * Returns an unmodifiable view of the list of schedules
+     * needing to be reminded. This list will not contain any
+     * duplicate schedules.
+     */
+    ObservableList<Schedule> getScheduleToRemindList();
 }
 ```
 ###### \java\seedu\address\model\schedule\Schedule.java
@@ -610,25 +728,27 @@ public class CommandIdentifier {
  * Guarantees: details are present and not null, field values are validated.
  */
 public class Schedule {
+    private static final Logger logger = LogsCenter.getLogger(Schedule.class);
+
     private ObjectProperty<ScheduleDate> scheduleDate;
     private ObjectProperty<Activity> activity;
-    private ObjectProperty<Name> personInvolvedName;
+    private ObjectProperty<UniquePersonNameList> personInvolvedNames;
 
     /**
      * Every field must be present and not null.
      */
-    public Schedule(ScheduleDate scheduleDate, Activity activity, Name personInvolvedName) {
-        requireAllNonNull(scheduleDate, activity, personInvolvedName);
+    public Schedule(ScheduleDate scheduleDate, Activity activity, Set<Name> personInvolvedNames) {
+        requireAllNonNull(scheduleDate, activity, personInvolvedNames);
         this.scheduleDate = new SimpleObjectProperty<>(scheduleDate);
         this.activity = new SimpleObjectProperty<>(activity);
-        this.personInvolvedName = new SimpleObjectProperty<>(personInvolvedName);
+        this.personInvolvedNames = new SimpleObjectProperty<>(new UniquePersonNameList(personInvolvedNames));
     }
 
     /**
      * Creates a copy of the given Schedule.
      */
     public Schedule(Schedule source) {
-        this(source.getScheduleDate(), source.getActivity(), source.getPersonInvolvedName());
+        this(source.getScheduleDate(), source.getActivity(), source.getPersonInvolvedNames());
     }
 
     public ScheduleDate getScheduleDate() {
@@ -793,6 +913,21 @@ public class UniqueScheduleList implements Iterable<Schedule> {
 }
 
 ```
+###### \java\seedu\address\model\UserPrefs.java
+``` java
+    public void enableWelcomeScreen() {
+        isWelcomeScreenEnabled = true;
+    }
+
+    public void disableWelcomeScreen() {
+        isWelcomeScreenEnabled = false;
+    }
+
+    public boolean getWelcomeScreenEnabledInfo() {
+        return isWelcomeScreenEnabled;
+    }
+
+```
 ###### \java\seedu\address\model\util\SampleDataUtil.java
 ``` java
     /**
@@ -803,9 +938,11 @@ public class UniqueScheduleList implements Iterable<Schedule> {
                                                List<String> peopleInvolved)
             throws IllegalValueException {
         HashSet<Schedule> schedules = new HashSet<>();
+        Set<Name> personInvolvedSet = new HashSet<>();
         for (int i = 0; i < scheduleDates.size(); i++) {
+            personInvolvedSet.add(new Name(peopleInvolved.get(i)));
             schedules.add(new Schedule(new ScheduleDate(scheduleDates.get(i)), new Activity(activities.get(i)),
-                    new Name(peopleInvolved.get(i))));
+                    personInvolvedSet));
         }
 
         return schedules;
@@ -823,6 +960,7 @@ public class XmlAdaptedSchedule {
     private String schedule;
 
     private Logger logger = LogsCenter.getLogger(XmlAdaptedSchedule.class);
+
     /**
      * Constructs an XmlAdaptedSchedule.
      * This is the no-arg constructor that is required by JAXB.
@@ -866,4 +1004,152 @@ public class XmlAdaptedSchedule {
                 "Date: " + schedule.getScheduleDate() + " Activity: " + schedule.getActivity())));
     }
 
+```
+###### \java\seedu\address\ui\UiManager.java
+``` java
+        try {
+            welcomeScreen = new WelcomeScreen(primaryStage, config, prefs, logic, model);
+            if (prefs.getWelcomeScreenEnabledInfo()) {
+                welcomeScreen.show(); //This should be called before creating other UI parts
+                welcomeScreen.fillInnerParts();
+            } else {
+                welcomeScreen.loadMainWindow();
+            }
+```
+###### \java\seedu\address\ui\WelcomeScreen.java
+``` java
+/**
+ * The Welcome Screen is opened when the application is run. Main Window will be
+ * loaded when the welcome screen is closed.
+ */
+public class WelcomeScreen extends UiPart<Region> {
+    private static final String ICON = "/images/contag_logo.png";
+    private static final String LOGO = "/images/contag_logo_high_res.png";
+    private static final String FXML = "WelcomeScreen.fxml";
+    private static final int FIXED_HEIGHT = 450;
+    private static final int FIXED_WIDTH = 450;
+
+    private static final Logger logger = LogsCenter.getLogger(UiManager.class);
+
+    private Stage primaryStage;
+    private Config config;
+    private UserPrefs prefs;
+    private Logic logic;
+    private Model model;
+
+    private MainWindow mainWindow;
+
+    private ImageView logo;
+    private Button continueButton;
+
+    @FXML
+    private VBox welcomeWindow;
+
+    @FXML
+    private StackPane logoPlaceHolder;
+
+    @FXML
+    private StackPane buttonPlaceHolder;
+
+    public WelcomeScreen(Stage primaryStage, Config config, UserPrefs prefs, Logic logic, Model model) {
+        super(FXML);
+
+        // main window dependencies
+        this.primaryStage = primaryStage;
+        this.config = config;
+        this.prefs = prefs;
+        this.logic = logic;
+        this.model = model;
+
+        setWindowFixedSize();
+        setIcon(ICON);
+        Scene scene = new Scene(getRoot());
+        primaryStage.setScene(scene);
+    }
+
+    private void setWindowFixedSize() {
+        primaryStage.setHeight(FIXED_HEIGHT);
+        primaryStage.setWidth(FIXED_WIDTH);
+        primaryStage.setResizable(false);
+    }
+
+    /**
+     * Fills up all the placeholders of this window.
+     */
+    void fillInnerParts() {
+        logo = new ImageView(new Image(LOGO));
+        logo.setFitHeight(250);
+        logo.setFitWidth(250);
+        logoPlaceHolder.getChildren().add(logo);
+
+        continueButton = new Button("Continue");
+        continueButton.setOnAction(new EventHandler<ActionEvent>() {
+            @Override
+            public void handle(ActionEvent event) {
+                welcomeWindow.getScene().getWindow().hide();
+                loadMainWindow();
+                openReminderWindowIfRequired();
+            }
+        });
+        buttonPlaceHolder.getChildren().add(continueButton);
+    }
+
+    /**
+     * Opens main window.
+     */
+    public void loadMainWindow() {
+        mainWindow = new MainWindow(primaryStage, config, prefs, logic, model);
+        mainWindow.show(); //This should be called before creating other UI parts
+        mainWindow.fillInnerParts();
+    }
+
+    void show() {
+        primaryStage.show();
+    }
+
+    /**
+     * Sets the given image as the icon of the main window.
+     *
+     * @param iconSource e.g. {@code "/images/help_icon.png"}
+     */
+    private void setIcon(String iconSource) {
+        FxViewUtil.setStageIcon(primaryStage, iconSource);
+    }
+
+    public MainWindow getMainWindow() {
+        return mainWindow;
+    }
+
+    /**
+     * Stops the application.
+     */
+    public void stop() {
+        if (mainWindow != null) {
+            prefs.updateLastUsedGuiSetting(mainWindow.getCurrentGuiSetting());
+            mainWindow.hide();
+            mainWindow.releaseResources();
+        }
+    }
+
+```
+###### \resources\view\WelcomeScreen.fxml
+``` fxml
+<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+
+<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:id="welcomeWindow">
+    <padding>
+        <Insets bottom="10.0" left="10.0" right ="10.0" top="10.0"/>
+    </padding>
+    <StackPane fx:id="logoPlaceHolder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+        <padding>
+            <Insets bottom="5" left="10" right="10" top="5" />
+        </padding>
+    </StackPane>
+    <StackPane fx:id="buttonPlaceHolder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+        <padding>
+            <Insets bottom="5" left="10" right="10" top="5" />
+        </padding>
+    </StackPane>
+</VBox>
 ```
