--- a/collated/test/CT15.md
+++ b/collated/test/CT15.md
@@ -476,7 +476,7 @@ public class ScheduleBuilder {
         try {
             ScheduleDate defaultScheduleDate = new ScheduleDate(DEFAULT_SCHEDULE_DATE);
             Activity defaultActivity = new Activity(DEFAULT_ACTIVITY);
-            Name defaultPersonName = new Name(DEFAULT_PERSON_NAME);
+            Set<Name> defaultPersonName = SampleDataUtil.getPersonNamesSet(DEFAULT_PERSON_NAME);
             this.schedule = new Schedule(defaultScheduleDate, defaultActivity, defaultPersonName);
         } catch (IllegalValueException ive) {
             throw new AssertionError("Default schedule's values are invalid.");
@@ -494,14 +494,14 @@ public class ScheduleBuilder {
 ###### \java\seedu\address\testutil\ScheduleBuilder.java
 ``` java
     /**
-     * Sets the {@code Activity} of the {@code Schedule} that we are building.
+     * Sets the {@code personInvolvedNames} of the {@code Schedule} that we are building.
      */
-    public ScheduleBuilder withPersonName(String personName) {
+    public ScheduleBuilder withPersonName(String... personNames) {
         try {
             schedule = new Schedule(schedule.getScheduleDate(), schedule.getActivity(),
-                    new Name(personName));
+                    SampleDataUtil.getPersonNamesSet(personNames));
         } catch (IllegalValueException ive) {
-            throw new IllegalArgumentException("activity is expected to be unique.");
+            throw new IllegalArgumentException("Person names are expected to be unique.");
         }
         return this;
     }
